<resources>
    <string name="app_name">REPOSTERIA ANGELES</string>
    <string name="iniciar">INICIAR SESION</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="ventas">VENTAS</string>
    <string name="registro">REGISTRO</string>
    <string name="registrar">Registrar</string>
    <string name="gastos">GASTOS</string>
    <string name="reporte">REPORTES</string>
    <string name="cliente">CLIENTES</string>
    <string name="estadistica">ESTADÍSTICAS</string>
    <string name="encontras_venta">Encontrar venta</string>
    <string name="producto_title">PRODUCTOS</string>
    <string name="producto">Productos</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="preferencias">Preferencias</string>
    <string name="venta">Venta Total</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="fecha">Fecha de caducidad</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="fecha_final">Fecha final</string>
    <string name="descripcion">Descripción</string>
    <string name="productCode">Código</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Repostería Angeles</string>
    <string name="nav_header_subtitle">Los mejores postres de Guadalajara</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Productos</string>
    <string name="menu_gallery">Ingresos</string>
    <string name="menu_slideshow">Gastos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reportes">Reportes</string>
    <string name="clientes">Clientes</string>


</resources>