<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ingresos"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_gastos"
            android:icon="@drawable/ic_baseline_arrow_downward_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_baseline_emoji_people_24"
            android:title="@string/clientes" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_baseline_find_in_page_24"
            android:title="@string/reportes"
            android:visible="false" />
        <item
            android:id="@+id/nav_estadisticas"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="Estadísticas"
            android:visible="false" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="Salir" />
    </group>
</menu>