<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_productos">

    <fragment
        android:id="@+id/nav_productos"
        android:name="com.example.reposteria_angeles.ui.producto.ProductoFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_producto" />

    <fragment
        android:id="@+id/nav_ingresos"
        android:name="com.example.reposteria_angeles.ui.ingreso.IngresoFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_ingreso" />

    <fragment
        android:id="@+id/nav_gastos"
        android:name="com.example.reposteria_angeles.ui.gasto.GastoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_gasto" />

    <fragment
        android:id="@+id/nav_cliente"
        android:name="com.example.reposteria_angeles.ui.cliente.ClienteFragment"
        android:label="Cliente"
        tools:layout="@layout/fragment_cliente" />


</navigation>