<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/txtFinalEstadistica"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text"
        android:drawableLeft="@drawable/ic_baseline_date_range_24"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/fecha_final"
        android:editable="false"
        android:inputType="none"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#81000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInicioEstadistica" />

    <TextView
        android:id="@+id/txtTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/estadistica"
        android:textColor="#040404"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txtTitulo2"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/txtTitulo2"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo2"
        app:srcCompat="@drawable/ic_baseline_bar_chart_24" />

    <EditText
        android:id="@+id/txtInicioEstadistica"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text"
        android:drawableLeft="@drawable/ic_baseline_date_range_24"
        android:ems="10"
        android:enabled="true"
        android:editable="false"
        android:inputType="none"
        android:hint="@string/fecha_inicio"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#81000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/btnIngresosReporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Filtrar"
        app:layout_constraintEnd_toEndOf="@+id/txtFinalEstadistica"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/txtFinalEstadistica"
        app:layout_constraintTop_toBottomOf="@+id/txtFinalEstadistica" />

    <!--Ui component for our bar chart-->
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="360dp"
        android:layout_height="192dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtFinalEstadistica"
        app:layout_constraintStart_toStartOf="@+id/txtFinalEstadistica"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresosReporte"
        app:layout_constraintVertical_bias="0.094" />

</androidx.constraintlayout.widget.ConstraintLayout>