<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.producto.ProductoFragment">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:drawableLeft="@drawable/buscar"
                android:text="Encontrar producto"
                android:textColor="#B20B0B0B"
                app:layout_constraintBottom_toTopOf="@+id/txtBuscarProducto"
                app:layout_constraintEnd_toEndOf="@+id/txtBuscarProducto"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toStartOf="@+id/txtBuscarProducto" />

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:text="@string/producto_title"
                android:textColor="#040404"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/txtTitulo"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="@+id/txtTitulo"
                app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
                app:srcCompat="@drawable/canasta" />


            <EditText
                android:id="@+id/txtBuscarProducto"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/productCode"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/txtTitulo"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="@+id/txtTitulo"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:drawableLeft="@drawable/buscar"
                android:text="Encontrar producto"
                android:textColor="#B20B0B0B"
                app:layout_constraintBottom_toTopOf="@+id/txtBuscarProducto"
                app:layout_constraintEnd_toEndOf="@+id/txtBuscarProducto"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toStartOf="@+id/txtBuscarProducto" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="306dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_edit_24"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#81000000"
                app:layout_constraintEnd_toEndOf="@+id/txtBuscarProducto"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/txtBuscarProducto"
                app:layout_constraintTop_toBottomOf="@+id/txtBuscarProducto" />

            <EditText
                android:id="@+id/txtPrecio"
                android:layout_width="306dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_attach_money_24"
                android:ems="10"
                android:hint="@string/precio"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#81000000"
                app:layout_constraintEnd_toEndOf="@+id/txtCantidad"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtCantidad"
                app:layout_constraintTop_toBottomOf="@+id/txtCantidad" />

            <EditText
                android:id="@+id/txtCantidad"
                android:layout_width="306dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_123_24"
                android:ems="10"
                android:hint="@string/cantidad"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#81000000"
                app:layout_constraintEnd_toEndOf="@+id/txtNombre"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtNombre"
                app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

            <EditText
                android:id="@+id/txtCaduccidad"
                android:layout_width="306dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_date_range_24"
                android:editable="false"
                android:ems="10"
                android:hint="@string/fecha"
                android:inputType="none"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#81000000"
                app:layout_constraintEnd_toEndOf="@+id/txtPrecio"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtPrecio"
                app:layout_constraintTop_toBottomOf="@+id/txtPrecio" />

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="306dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_edit_24"
                android:ems="10"
                android:hint="Descripción"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#81000000"
                app:layout_constraintEnd_toEndOf="@+id/txtPrecio"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/txtPrecio"
                app:layout_constraintTop_toBottomOf="@+id/txtCaduccidad" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/txtDescripcion"
                tools:layout_editor_absoluteX="0dp">

                <ImageButton
                    android:id="@+id/btnAgregarP"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:background="#FFFFFF"
                    app:srcCompat="@drawable/ic_baseline_add_24"
                    tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/btnSearchProduct"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:src="@drawable/buscar"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/btnEditarProducto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="#FFFFFF"
                    app:srcCompat="@drawable/edit"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/btnEliminarProducto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="#FFFFFF"
                    app:srcCompat="@drawable/ic_baseline_delete_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/btnScan"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:src="@drawable/ic_menu_camera"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/btnList"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:src="@drawable/eyes"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>